[package]
name = "jsrs"
version = "0.1.0"
authors = [
    "Terry Sun <terrynsun@gmail.com>",
    "Saghm Rossi <saghmrossi@gmail.com>"
]

[dependencies.jsrs-parser]
git = "https://github.com/rustoscript/js.rs-parser.git"
rev = "d875cd2"

[dependencies.jsrs-common]
git = "https://github.com/rustoscript/js.rs-common.git"
rev = "3e8c1b0"

[dependencies.french_press]
git = "https://github.com/saghm/french-press"
rev = "fbf7edc"

[dependencies.js-types]
git = "https://github.com/rustoscript/js-types.git"
rev = "3419872"

[dependencies]
rustyline = "0.2.0"
uuid = "0.1"
